--- a/views/partials/tabla-equipos.handlebars
+++ b/views/partials/tabla-equipos.handlebars
@@ -3,7 +3,7 @@
   <tr></tr>
     <td>{{id}}</td>
     <td>{{name}}</td>
-    <td><button>Ver</button><button>Editar</button><button>Borrar</button></td></tr>
+    <td><button onclick="location.href='club/{{id}}'" type="button">Ver</button><button>Editar</button><button>Borrar</button></td></tr>
   {{/each}}
 
 
