Agrega funciones principales
Dentro de ellas estan las opciones de ver, editar, agregar y borrar los equipos

--- a/views/body.handlebars
+++ b/views/body.handlebars
@@ -4,9 +4,10 @@
   agrega/elimina el equipo que quieras!</p>
 
 <h3>Equipos</h3>
-
+<button onclick="location.href='add/'" type="button">Añadir equipo</button>
 <table>
   <tr>
+    <th>Escudo</th>
     <th>Id</th>
     <th>Equipo</th>
     <th>Acción</th>
