--- a/views/club.handlebars
+++ b/views/club.handlebars
@@ -1,6 +1,6 @@
 <h1>Crud Clubes</h1>
 <div>
-    <img src="{{data.club.crestUrl}}">
+    <img src="{{data.club.crestUrl}}" alt="" name="crest"/>
     <table>
         <caption>{{data.club.name}}</caption>
         <tbody>
