--- a/views/partials/tabla-equipos.handlebars
+++ b/views/partials/tabla-equipos.handlebars
@@ -1,8 +1,8 @@
 
   {{#each data.clubes as |club|}}
   <tr></tr>
-    <td><img src="{{crestUrl}}" alt=""/></td>
     <td>{{id}}</td>
+    <td><img src="{{crestUrl}}" alt="" class="crest"/></td>
     <td>{{name}}</td>
     <td><button onclick="location.href='club/{{id}}'" type="button">Ver</button><button onclick="location.href='edit/{{id}}'">Editar</button><button onclick="location.href='delete/{{id}}'">Borrar</button></td></tr>
   {{/each}}
